--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@ h1 {
 
     color: #4aaaa5;
 
- 
 
 }
 
@@ -24,6 +23,8 @@ body {
 
     color: #777777;
 
+    width: 960px;
+
 }
 
  
@@ -32,6 +33,23 @@ Footer{
 
     background-color: #666666;
 
-   
+}
 
+
+#headshot { 
+    Float: left;
+    
+    Width: 200px;
+
+    Height: 200px;
+
+}
+
+#PolarBear {
+
+    Float: right;
+
+    Width: 200px;
+
+    height: 200px;
 }
