--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@ h1 {
 
     background-color: #ffffff;
 
+    border: 1px;
+    margin: 10 10 20 10;
+    padding: 10px;
+
+
     border-color: #cccccc;
 
     color: #4aaaa5;
